--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>This is my site where I post all my work with Digital Signal Processing. It includes some cool work with music and image files as well as some machine learning done in MATLAB.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>I am an Electrical and Computer Engineer that loves messing around with audio and image files in MATLAB, experimenting with machine learning and digital filters.  </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="https://github.com/auisgold" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Check out my work!
                     </a>
                 </div>
             </div>
