--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
     {% else %}
     {% include contact.html %}
     {% endif %}
+        
+    {% include privacypolicy.html %}
 
     {% include footer.html %}
     {% include modals.html %}
