--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#Privacy Policy">Privacy Policy</a>
+                        <a href="#privacypolicy">Privacy Policy</a>
                     </li>
                 </ul>
             </div>
