--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,15 @@
     <header>
         <div class="container">
             <div class="row">
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({
+                    google_ad_client: "ca-pub-7334241771588328",
+                    enable_page_level_ads: true
+                    });
+                </script>
+            </div>
+            <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
