--- a/_includes/privacypolicy.html
+++ b/_includes/privacypolicy.html
@@ -8,6 +8,31 @@
                 </div>
             </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <style>
+a:link {
+  color: blue; 
+  background-color: transparent; 
+  text-decoration: none;
+}
+
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
                 <p>The privacy of our visitors to http://boulderpogoraids.tk is important to us. Please click <a href="https://app.termly.io/document/privacy-policy/e85a4045-e18a-4008-a886-a81fabab4f85">here</a> to view our privacy policy.</p>
                 </div>
             </div>
