--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,14 @@
             x.parentNode.insertBefore(s, x);
         })();
     </script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-7334241771588328",
+        enable_page_level_ads: true
+        });
+    </script>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
