--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,17 @@
  <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
+         <div class="row">
+         </div align="center">
+         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-7334241771588328",
+        enable_page_level_ads: true
+        });
+    </script>
+     </div>
+     </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
@@ -20,14 +31,5 @@
                     </a>
                 </div>
             </div>
-            </div align="center">
-         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-7334241771588328",
-        enable_page_level_ads: true
-        });
-    </script>
-     </div>
         </div>
     </section>
