--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
     <section class="success" id="about">
         <div class="container">
          <div class="row">
-         </div align="center">
+         <div align="center">
          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({
